--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "react": "^16.1.1",
+    "react-art": "^16.3.2",
     "react-dom": "^16.1.1",
-    "react-native-web": "^0.1.14"
+    "react-native-web": "^0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-react-native-web": "^0.6.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
